--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ body {
 }
 .col {
   flex-basis: 50%;
+  margin-bottom: 5%;
 }
 .content-title {
   font-weight: bold;
@@ -160,7 +161,7 @@ body {
 }
 .poster-wrapper {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   margin-top: 55px;
 }
 .poster {
